# planet9

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  PROGRESS.md  README.md
crates/p9-2016-constraints/: Cargo.toml
crates/p9-2016-constraints/src/: clustering_metric.rs  detection_limits.rs  inclination_survey.rs  lib.rs  parameter_grid.rs  plots.rs
crates/p9-2016-evidence/: Cargo.toml
crates/p9-2016-evidence/src/: kbo_elements.rs  lib.rs  octupole.rs  phase_portrait.rs  plots.rs  resonance.rs  scattered_disk_sim.rs
crates/p9-2016-inclined-tnos/: Cargo.toml
crates/p9-2016-inclined-tnos/src/: known_objects.rs  kozai_lidov.rs  lib.rs  plots.rs  simulation.rs
crates/p9-2016-obliquity/: Cargo.toml
crates/p9-2016-obliquity/src/: lib.rs  parameter_survey.rs  plots.rs  secular_hamiltonian.rs  solar_model.rs
crates/p9-2017-bias/: Cargo.toml
crates/p9-2017-bias/src/: bias_function.rs  clustering_test.rs  kbo_sample.rs  lib.rs  plots.rs
crates/p9-2018-kuiper-belt/: Cargo.toml
crates/p9-2018-kuiper-belt/src/: lib.rs  plots.rs  population_analysis.rs  simulation.rs
crates/p9-2018-resonance/: Cargo.toml
crates/p9-2018-resonance/src/: lib.rs  plots.rs  probability_analysis.rs  resonance_catalog.rs  simulation.rs
crates/p9-2019-clustering/: Cargo.toml
crates/p9-2019-clustering/src/: clustering_analysis.rs  kbo_sample.rs  lib.rs  ossos_comparison.rs  plots.rs  poincare_variables.rs
crates/p9-2019-review/: Cargo.toml
crates/p9-2019-review/src/: detection_prospects.rs  lib.rs  parameter_survey.rs  plots.rs  revised_parameters.rs
crates/p9-2021-oort-cloud/: Cargo.toml
crates/p9-2021-oort-cloud/src/: injection_simulation.rs  lib.rs  oort_cloud.rs  plots.rs  population_comparison.rs
crates/p9-2021-orbit/: Cargo.toml
crates/p9-2021-orbit/src/: lib.rs  plots.rs  posterior.rs  reference_population.rs  statistical_measures.rs
crates/p9-2021-ztf/: Cargo.toml
crates/p9-2021-ztf/src/: detection_efficiency.rs  exclusion.rs  lib.rs  plots.rs  survey_model.rs
crates/p9-2022-des/: Cargo.toml
crates/p9-2022-des/src/: color_models.rs  lib.rs  plots.rs  recovery_analysis.rs  survey_model.rs
crates/p9-2024-neptune-crossing/: Cargo.toml
crates/p9-2024-neptune-crossing/src/: hypothesis_test.rs  lib.rs  observed_tnos.rs  plots.rs  simulation.rs
crates/p9-2024-panstarrs/: Cargo.toml
crates/p9-2024-panstarrs/src/: combined_exclusion.rs  detection_pipeline.rs  lib.rs  plots.rs  survey_model.rs
crates/p9-core/: Cargo.toml
crates/p9-core/src/: constants.rs  lib.rs  types.rs
crates/p9-core/src/analysis/: elements.rs  mod.rs  secular.rs
crates/p9-core/src/coords/: democratic_helio.rs  mod.rs
crates/p9-core/src/forces/: galactic_tide.rs  j2_secular.rs  mod.rs
crates/p9-core/src/initial_conditions/: mod.rs  planets.rs  scattered_disk.rs
crates/p9-core/src/integrator/: bulirsch_stoer.rs  hybrid.rs  kepler_step.rs  kick.rs  mod.rs  whm.rs
crates/p9-core/src/vis/: mod.rs
crates/p9-review-article/: Cargo.toml
crates/p9-review-article/src/: diagrams.rs  main.rs
