[workspace]
resolver = "2"
members = [
    "crates/p9-core",
    "crates/p9-2016-evidence",
    "crates/p9-2016-constraints", "crates/p9-2016-obliquity", "crates/p9-2016-inclined-tnos", "crates/p9-2017-bias",
]

[workspace.dependencies]
nalgebra = { version = "0.32", features = ["serde-serialize"] }
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
approx = "0.5"
rayon = "1.10"
