[workspace]
resolver = "2"
members = [
    "crates/p9-core",
    "crates/p9-2016-evidence",
    "crates/p9-2016-constraints", "crates/p9-2016-obliquity", "crates/p9-2016-inclined-tnos", "crates/p9-2017-bias",
    "crates/p9-2018-kuiper-belt",
    "crates/p9-2018-resonance",
    "crates/p9-2019-clustering",
    "crates/p9-2019-review",
    "crates/p9-2021-oort-cloud",
    "crates/p9-2021-orbit",
    "crates/p9-2021-ztf",
    "crates/p9-2022-des",
    "crates/p9-2024-panstarrs",
    "crates/p9-2024-neptune-crossing",
]

[workspace.dependencies]
nalgebra = { version = "0.32", features = ["serde-serialize"] }
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
approx = "0.5"
rayon = "1.10"
