[package]
name = "p9-2016-evidence"
version = "0.1.0"
edition = "2021"
description = "Reproduction of Batygin & Brown (2016) 'Evidence for a Distant Giant Planet'"

[dependencies]
p9-core = { path = "../p9-core" }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
