[package]
name = "p9-core"
version = "0.1.0"
edition = "2021"
description = "N-body integrator and orbital mechanics library for Planet Nine research"

[dependencies]
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
